Update benchmark